<resources>
    <string name="app_name">Mr.Game</string>

    <string name="hero_name">英雄名</string>
    <string name="hero_title">称号</string>
    <string name="hero_desc">英雄简介</string>
    <string name="empty">无</string>
    <string name="nav_statistics">统计</string>
    <string name="nav_achievement">成就</string>
    <string name="nav_skill">能力</string>
    <string name="nav_item">仓库</string>
    <string name="nav_reward">商店</string>
    <string name="nav_task">任务</string>
    <string name="nav_info">个人简介</string>
    <string name="nav_setting">设置</string>
    <string name="nav_help">帮助</string>
    <string name="level">等级</string>

    <string name="no_sale">非卖品</string>
    <string name="item_num_infinite">无限</string>
    <string name="nav_exit">退出</string>

    <string name="urgency_num">紧急系数:</string>
    <string name="fear_num">恐惧系数:</string>
    <string name="difficulty_num">困难系数:</string>
    <string name="task_get_xp">任务所得经验值:</string>
    <string name="progress_xp">经验值</string>
    <string name="progress_energy">能量</string>
    <string name="nav_about">关于</string>


    <string name="about_text">\t\t这里是软件的作者峰少,感谢使用本软件.这个软件的创意来自于生活的灵感,但没想到已经有人先将这个想法实现了出来,类似的产品有LifeRPG,如果你有什么意见,可以在我的开源项目里提出,如果你觉得LifeRPG不错,你也可以去试试,确实是不错的APP \n  \t\tGithub开源地址:https://github.com/FENG-MASTER/LifeGamer </string>
    <string name="avator_query_text">搜索内容</string>

    <!--默认数据库数据-->
    <string name="db_default_fitness">体能</string>
    <string name="db_default_leg_strength">腿部力量</string>
    <string name="db_default_arm_strength">手臂力量</string>
    <string name="db_default_waist_strength">腰部力量</string>
    <string name="db_default_iq">智商</string>
    <string name="db_default_eq">情商</string>
    <string name="db_default_happiness">幸福感</string>
    <string name="db_default_anxiety">焦虑感</string>
    <string name="db_default_happy">开心</string>
    <string name="db_default_sad">难过</string>
    <string name="db_default_code_skill">开发能力</string>
    <string name="db_default_communication_skill">沟通能力</string>
    <string name="db_default_understanding_skill">理解能力</string>
    <string name="db_default_think_skill">思考能力</string>
    <string name="db_default_cooking_skill">厨艺</string>
    <string name="db_default_physical_fitness">身体素质</string>
    <string name="db_default_brain">大脑</string>
    <string name="db_default_emotion">情绪</string>
    <string name="db_default_skill">技能</string>
    <string name="db_default_fitness_desc">一般通过锻炼可以增强</string>
    <string name="db_default_leg_strength_desc">腿部锻炼可以增强</string>
    <string name="db_default_arm_strength_desc">手臂锻炼可以增强</string>
    <string name="db_default_waist_desc">腰部锻炼可以增强</string>
    <string name="db_default_iq_desc">有的人天生就聪明</string>
    <string name="db_default_eq_desc">处理人情世故的能力</string>
    <string name="db_default_happiness_desc">生活幸福的程度</string>
    <string name="db_default_anxiety_desc">焦虑</string>
    <string name="db_default_happy_desc">开心</string>
    <string name="db_default_sad_desc">难过</string>
    <string name="db_default_code_skill_desc">改变世界的能力</string>
    <string name="db_default_communication_skill_desc">与人沟通的能力</string>
    <string name="db_default_understanding_skill_desc">理解事物的能力</string>
    <string name="db_default_think_skill_desc">思考事情的能力</string>
    <string name="db_default_cooking_skill_desc">生活中必不可少的技能</string>
    <string name="avatar">头像</string>
    <string name="select">选择框</string>
    <string name="all_achievements">所有</string>
    <string name="got_achievements">已获得成就</string>
    <string name="item_all">所有</string>
    <string name="reward_all_availble">可获得奖励</string>
    <string name="reward_all">所有奖励</string>
    <string name="skill_all">全部</string>
    <string name="task_all">所有任务</string>
    <string name="task_today">今日任务</string>
    <string name="undo">撤销</string>
    <string name="achievement_add">添加成就</string>
    <string name="achievement_got">获得成就</string>
    <string name="achievement_lose">失去成就</string>
    <string name="achievement_update">更新成就</string>
    <string name="item_add">新增物品</string>
    <string name="item_update">更新物品</string>
    <string name="reward_add">新增奖励</string>
    <string name="reward_update">更新奖励</string>
    <string name="skill_add">新增能力</string>
    <string name="skill_del">删除能力</string>
    <string name="success">成功</string>
    <string name="increase">增加</string>
    <string name="skill_update">更新能力</string>
    <string name="task_add">添加任务</string>
    <string name="task_del">删除任务</string>
    <string name="task">任务</string>
    <string name="fail">失败</string>
    <string name="task_finish">完成任务</string>
    <string name="task_update">更新任务</string>
    <string name="show_top_info">显示信息栏</string>
    <string name="achievement_name">成就名称</string>
    <string name="achievement_type">分类</string>
    <string name="achievement_desc">成就简介</string>
    <string name="item_name">物品名称</string>
    <string name="item_type">分类</string>
    <string name="item_desc">简介</string>
    <string name="item_quantity">数量</string>
    <string name="item_consumable">物品是否为消耗品</string>
    <string name="reward_name">奖励名称</string>
    <string name="reward_type">分类</string>
    <string name="reward_desc">简介</string>
    <string name="reward_price">购买消耗金币数</string>
    <string name="reward_non_sale">不可购买</string>
    <string name="reward_quantity">数量</string>
    <string name="reward_add_item">获得后加入物品</string>
    <string name="reward_consumable">物品是否为消耗品</string>
    <string name="skill_name">能力名称</string>
    <string name="skill_type">分类</string>
    <string name="skill_desc">能力简介</string>
    <string name="task_name">任务名称</string>
    <string name="task_desc">任务描述</string>
    <string name="task_add_pre_task">添加前置任务</string>
    <string name="task_extra_tab">额外</string>
    <string name="task_time_tab">时间</string>
    <string name="task_reward_tab">奖励</string>
    <string name="task_reward_punish_tab">奖励与惩罚</string>
    <string name="task_pre_task">前置任务</string>
    <string name="task_repeat_type">重复类型</string>
    <string name="task_interval">重复间隔</string>
    <string name="task_deadline">到期时间</string>
    <string name="task_available_time">可完成次数</string>
    <string name="task_time_infinite">无限</string>
    <string name="task_after_deadline">过期相关</string>
    <string name="task_auto_fail">过期自动失败</string>
    <string name="task_earn_gold">获得金币数量</string>
    <string name="task_add_ability_point">增加能力</string>
    <string name="task_add_ability_reward">新增能力奖励</string>
    <string name="task_earn_item">获得物品</string>
    <string name="task_add_item_reward">新增物品奖励</string>
    <string name="task_earn_achievement">获得成就</string>
    <string name="task_add_achievement_reward">新增成就奖励</string>
    <string name="task_lose_gold">扣除金币数量</string>
    <string name="task_lose_ability">扣除能力点</string>
    <string name="task_add_ability_punish">新增能力惩罚</string>
    <string name="task_lose_item">扣除物品</string>
    <string name="task_add_item_punish">新增物品惩罚</string>
    <string name="task_lose_achievement">失去成就</string>
    <string name="task_add_achievement_punish">新增成就惩罚</string>
    <string name="sub">减少</string>
    <string name="task_lose_once_get">失败一次后获得</string>
    <string name="task_finish_times_get">完成指定次数后获得</string>
    <string name="task_finish_once_get">完成一次后获得</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
