<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <import type="com.lifegamer.fengmaster.lifegamer.util.FormatUtil"/>

        <variable
            name="task"
            type="com.lifegamer.fengmaster.lifegamer.model.Task"/>

    </data>

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"

                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left|top"
                        android:text="@string/task_repeat_type"
                        android:textSize="12sp"/>

                    <Spinner
                        android:layout_gravity="center"
                        android:id="@+id/sp_dialog_edit_task_rep_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:entries="@array/task_req_type"
                        android:spinnerMode="dropdown">

                    </Spinner>


                </LinearLayout>


                <LinearLayout
                    android:id="@+id/layout_task_time_rep_interval"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:text="@string/task_interval"
                        android:textSize="12sp"/>

                    <EditText
                        android:id="@+id/et_dialog_edit_task_rep_interval"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:inputType="number"
                        android:text="@{String.valueOf(task.repeatInterval)}"/>

                </LinearLayout>


            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/task_deadline"
                android:textSize="12sp"/>

            <Button
                android:id="@+id/bt_dialog_edit_task_expiration_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text='@{FormatUtil.date2Str(task.expirationTime)}'/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/task_available_time"
                android:textSize="12sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <EditText
                    android:id="@+id/et_dialog_edit_task_rep_times"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:enabled="@{task.repeatAvailableTime!=-1}"
                    android:gravity="center"
                    android:inputType="number"
                    android:text="@{String.valueOf(task.repeatAvailableTime)}"/>

                <Switch
                    android:id="@+id/switch_dialog_edit_task_infinite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="@{task.repeatAvailableTime==-1}"
                    android:text="@string/task_time_infinite"/>


            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/task_after_deadline"
                android:textSize="12sp"/>

            <Switch
                android:id="@+id/switch_dialog_edit_task_auto_fail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="@{task.autoFail}"
                android:text="@string/task_auto_fail"/>


        </LinearLayout>


    </ScrollView>
</layout>
