
<layout>

    <data>
        <import type="com.lifegamer.fengmaster.lifegamer.Game"/>
        <import type="com.lifegamer.fengmaster.lifegamer.util.FormatUtil"/>
        <variable
            name="hero"
            type="com.lifegamer.fengmaster.lifegamer.model.Hero"/>
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:tools="http://schemas.android.com/tools"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical"
                  android:padding="10dp"
                  tools:context="com.lifegamer.fengmaster.lifegamer.fragment.HeroInfoFragment">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/im_hero_info_avatar"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_weight="1"
                android:src="@{ hero.avatarUrl == null? @drawable/ic_default :Game.instance.avatarManager.getAvatar(hero.avatarUrl).icon }"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="bottom"
                    android:orientation="horizontal">


                    <android.support.design.widget.TextInputLayout

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="5">

                        <EditText
                            android:text="@{hero.name}"
                            android:id="@+id/et_hero_info_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hero_name"
                            android:textSize="25sp"/>
                    </android.support.design.widget.TextInputLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="bottom"
                    android:orientation="horizontal">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="5">

                        <EditText
                            android:text="@{hero.title}"
                            android:id="@+id/et_hero_info_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hero_title"

                            android:textSize="16sp"/>

                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>


            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:paddingTop="20dp"
            android:gravity="bottom"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5">
                <EditText
                    android:text="@{hero.introduction}"
                    android:id="@+id/et_hero_info_desc"
                    android:hint="@string/hero_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            </android.support.design.widget.TextInputLayout>


        </LinearLayout>




    </LinearLayout>

</layout>

